# linkando_com_o_clion

./: CMakeLists.txt  README.md  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  main.cpp  shader.cpp  shader.h
